syntax = "proto3";
package novel;
option go_package="./;novelpb";

message NovelData {
    string novel_name = 1;
    string description = 2;
    string author = 3;
    int64 nb_chapter = 4;
    optional bytes cover = 5;
}

message GetNovelRequest{
    string novel_name = 1;
    optional int64 start_chapter = 2;
    optional int64 end_chapter = 3;
}

message GetNovelResponse {
    repeated bytes novel = 1;
}

message ListNovelRequest {

}

message ListNovelResponse {
    repeated NovelData novels = 1;
}

message RequestNovelRequest {
    string novel_name = 1;
}

message RequestNovelResponse {
    string novel_name = 1;
    oneof status_oneof {
        int64 current_collection = 2;
        int64 novel_building = 3;
        bool completed = 4;
    }
}

service NovelServer{
    rpc GetNovel(GetNovelRequest) returns (GetNovelResponse) {};
    rpc listNovel(ListNovelRequest) returns (ListNovelResponse) {};
    rpc RequestNovel(RequestNovelRequest) returns (stream RequestNovelResponse) {};
}